force-app/main/default/objects/Account/fields/Area_of_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Specialty__c</fullName>
    <label>Area of Specialty</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doctor Loan</fullName>
            </value>
            <value>
                <fullName>All-In-One Loan</fullName>
            </value>
            <value>
                <fullName>ARM</fullName>
            </value>
            <value>
                <fullName>Asset Depletion</fullName>
            </value>
            <value>
                <fullName>Bank Statement</fullName>
            </value>
            <value>
                <fullName>Bridge Loans</fullName>
            </value>
            <value>
                <fullName>Community Mortgage/No Income</fullName>
            </value>
            <value>
                <fullName>Condotel</fullName>
            </value>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>DPA</fullName>
            </value>
            <value>
                <fullName>DSCR</fullName>
            </value>
            <value>
                <fullName>FHA</fullName>
            </value>
            <value>
                <fullName>FHA 100% Financing</fullName>
            </value>
            <value>
                <fullName>FHA 203K</fullName>
            </value>
            <value>
                <fullName>Fannie Homestyle Reno</fullName>
            </value>
            <value>
                <fullName>Foreign National</fullName>
            </value>
            <value>
                <fullName>Hard Money</fullName>
            </value>
            <value>
                <fullName>HELOC</fullName>
            </value>
            <value>
                <fullName>ITIN</fullName>
            </value>
            <value>
                <fullName>Jumbo</fullName>
            </value>
            <value>
                <fullName>Non-QM</fullName>
            </value>
            <value>
                <fullName>Non-Warrantable Condo</fullName>
            </value>
            <value>
                <fullName>P&amp;L</fullName>
            </value>
            <value>
                <fullName>USDA</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
            <value>
                <fullName>Vacant Land</fullName>
            </value>
            <value>
                <fullName>1099</fullName>
            </value>
            <value>
                <fullName>Second Home</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Reverse Mortgage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>