force-app/main/default/objects/Account/fields/Biz_Dev_Designation__c.field-meta.xml
<CustomField>
    <fullName>Biz_Dev_Designation__c</fullName>
    <label>Biz Dev Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Biz Dev - Reach</fullName>
            </value>
            <value>
                <fullName>Biz Dev - Cabrera</fullName>
            </value>
            <value>
                <fullName>Biz Dev - Waters</fullName>
            </value>
            <value>
                <fullName>Biz Dev - Fritz</fullName>
            </value>
            <value>
                <fullName>Biz Dev - Olmsted</fullName>
            </value>
            <value>
                <fullName>Biz Dev - Perrault</fullName>
            </value>
            <value>
                <fullName>Biz Dev - Hornaday</fullName>
            </value>
            <value>
                <fullName>Biz Dev - Hsieh</fullName>
            </value>
            <value>
                <fullName>Biz Dev - Williams</fullName>
            </value>
            <value>
                <fullName>Biz Dev - Pugh</fullName>
            </value>
            <value>
                <fullName>Biz Dev - Bondarevsky</fullName>
            </value>
            <value>
                <fullName>Biz Dev - Rebagliati</fullName>
            </value>
            <value>
                <fullName>Biz Dev - Carey</fullName>
                <isActive>false</isActive>
                <label>Biz Dev - Carey</label>
            </value>
            <value>
                <fullName>Biz Dev - SERHANT ORL</fullName>
                <isActive>false</isActive>
                <label>Biz Dev - SERHANT ORL</label>
            </value>
            <value>
                <fullName>Biz Dev - Saludes</fullName>
                <isActive>false</isActive>
                <label>Biz Dev - Saludes</label>
            </value>
            <value>
                <fullName>Biz Dev - Wemert</fullName>
                <isActive>false</isActive>
                <label>Biz Dev - Wemert</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>