force-app/main/default/objects/Account/fields/Borrower_Withdrawal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Withdrawal_Reason__c</fullName>
    <label>Borrower Withdrawal Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Selected an Alternative Lender</fullName>
            </value>
            <value>
                <fullName>Found a More Competetive Interest Rate</fullName>
            </value>
            <value>
                <fullName>Costs Are Too High</fullName>
            </value>
            <value>
                <fullName>Chose to Purchase a Different Property</fullName>
            </value>
            <value>
                <fullName>Property Did Not Pass Inspection and Borrower is Not Purchasing Home</fullName>
            </value>
            <value>
                <fullName>Opted for a Direct Purchase Without Financing</fullName>
            </value>
            <value>
                <fullName>Chose Not to Proceed with the Financing Process</fullName>
            </value>
            <value>
                <fullName>Opted to Proceed with a Different Loan Application</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>