force-app/main/default/objects/Account/fields/Candidate_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Checklist</label>
    <referenceTo>Candidate_Checklist__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>