force-app/main/default/objects/Account/fields/Company_License_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Company_License_Expiration_Date__c</fullName>
    <label>Company License Expiration Date</label>
    <type>Date</type>
</CustomField>