force-app/main/default/objects/Account/fields/Company_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_License_Number__c</fullName>
    <label>Company License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>