force-app/main/default/objects/Account/fields/Company_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone_Number__c</fullName>
    <label>Company Phone Number</label>
    <type>Phone</type>
</CustomField>