force-app/main/default/objects/Account/fields/Current_User_Follow_Up_LO__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Follow_Up_LO__c</fullName>
    <formula>Follow_Up_LO__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User - Follow Up LO</label>
    <type>Checkbox</type>
</CustomField>