force-app/main/default/objects/Account/fields/Exclude_From_Duplicate_Check__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Duplicate_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude From Duplicate Check</label>
    <type>Checkbox</type>
</CustomField>