force-app/main/default/objects/Account/fields/Follow_Up_Lead_Created__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Lead_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow Up Lead Created</label>
    <type>Checkbox</type>
</CustomField>