force-app/main/default/objects/Account/fields/Follow_Up_LO__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_LO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Follow Up LO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>