force-app/main/default/objects/Account/fields/Follow_Up_LO_Name__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_LO_Name__c</fullName>
    <formula>Follow_Up_LO__r.FirstName &amp; &apos; &apos; &amp;  Follow_Up_LO__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follow Up LO Name</label>
    <type>Text</type>
</CustomField>