force-app/main/default/objects/Account/fields/Intake_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Intake_Form_Link__c</fullName>
    <formula>IF(ISBLANK(PersonEmail), &quot;&quot;, HYPERLINK( Intake_Form_URL__c &amp;  PersonEmail , &quot;Intake Form&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Form Link</label>
    <type>Text</type>
</CustomField>