force-app/main/default/objects/Account/fields/Intake_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Intake_Form_URL__c</fullName>
    <defaultValue>&apos;https://reachhomeloans.my.site.com/LeadIntakeForm/s/?email=&apos;</defaultValue>
    <label>Intake Form URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>