force-app/main/default/objects/Account/fields/Is_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Is_Borrower__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Borrower</label>
    <type>Checkbox</type>
</CustomField>