force-app/main/default/objects/Account/fields/Is_Realtor__c.field-meta.xml
<CustomField>
    <fullName>Is_Realtor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Realtor</label>
    <type>Checkbox</type>
</CustomField>