force-app/main/default/objects/Account/fields/Last_RC_Call__c.field-meta.xml
<CustomField>
    <fullName>Last_RC_Call__c</fullName>
    <label>Last RC Call</label>
    <type>DateTime</type>
</CustomField>