force-app/main/default/objects/Account/fields/Last_RC_SMS__c.field-meta.xml
<CustomField>
    <fullName>Last_RC_SMS__c</fullName>
    <label>Last RC SMS</label>
    <type>DateTime</type>
</CustomField>