force-app/main/default/objects/Account/fields/Last_UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>Last_UTM_Medium__c</fullName>
    <label>Last UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>