force-app/main/default/objects/Account/fields/Most_Recent_BPS__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_BPS__c</fullName>
    <label>Most Recent BPS</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>