force-app/main/default/objects/Account/fields/Most_Recent_Buydown__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Buydown__c</fullName>
    <label>Most Recent Buydown</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-0</fullName>
            </value>
            <value>
                <fullName>1-1</fullName>
            </value>
            <value>
                <fullName>2-1</fullName>
            </value>
            <value>
                <fullName>3-2-1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>