force-app/main/default/objects/Account/fields/Most_Recent_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Closing_Date__c</fullName>
    <label>Most Recent Closing Date</label>
    <type>Date</type>
</CustomField>