force-app/main/default/objects/Account/fields/Most_Recent_DPA__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_DPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Most Recent DPA</label>
    <type>Checkbox</type>
</CustomField>