force-app/main/default/objects/Account/fields/Most_Recent_FICO_Score__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_FICO_Score__c</fullName>
    <formula>Most_Recent_Transaction__r.FICO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent FICO Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>