force-app/main/default/objects/Account/fields/Most_Recent_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Loan_Amount__c</fullName>
    <label>Most Recent Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>