force-app/main/default/objects/Account/fields/Most_Recent_Loan_Officer__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Loan_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Recent Loan Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>