force-app/main/default/objects/Account/fields/Most_Recent_Loan_Type_1st_TD__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Loan_Type_1st_TD__c</fullName>
    <label>Most Recent Loan Type 1st TD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>FHA</fullName>
            </value>
            <value>
                <fullName>Jumbo</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>FarmersHomeAdministration</fullName>
            </value>
            <value>
                <fullName>NonQM</fullName>
            </value>
            <value>
                <fullName>USDA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>