force-app/main/default/objects/Account/fields/Most_Recent_LTV__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_LTV__c</fullName>
    <label>Most Recent LTV</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>