force-app/main/default/objects/Account/fields/Most_Recent_Rate_BuyDown__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Rate_BuyDown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Most Recent Rate BuyDown</label>
    <type>Checkbox</type>
</CustomField>