force-app/main/default/objects/Account/fields/Most_Recent_Term__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Term__c</fullName>
    <label>Most Recent Term</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>