force-app/main/default/objects/Account/fields/Most_Recent_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Recent Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>