force-app/main/default/objects/Account/fields/Name_For_Display__c.field-meta.xml
<CustomField>
    <fullName>Name_For_Display__c</fullName>
    <formula>FirstName &amp; &apos; &apos; &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name (For Display)</label>
    <type>Text</type>
</CustomField>