force-app/main/default/objects/Account/fields/Nickley_Realtor_LO__c.field-meta.xml
<CustomField>
    <fullName>Nickley_Realtor_LO__c</fullName>
    <description>Preferred Loan Officer allocation for this realtor, used to filter the &quot;My Nickley Realtors&quot; Home tab for Zach Fritz, Joe Olmsted, and Rhett Delaney. Admin-managed only.</description>
    <inlineHelpText>Which LO this Nickley Group realtor is allocated to. Only Admins should edit this.</inlineHelpText>
    <label>Nickley Realtor LO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zach Fritz</fullName>
            </value>
            <value>
                <fullName>Joe Olmsted</fullName>
            </value>
            <value>
                <fullName>Rhett Delaney</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>