force-app/main/default/objects/Account/fields/of_Closed_Transactions__c.field-meta.xml
<CustomField>
    <fullName>of_Closed_Transactions__c</fullName>
    <label># of Closed Transactions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>