force-app/main/default/objects/Account/fields/Preferred_LO__c.field-meta.xml
<CustomField>
    <fullName>Preferred_LO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred LO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>