force-app/main/default/objects/Account/fields/Property_Sold__c.field-meta.xml
<CustomField>
    <fullName>Property_Sold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Property Sold</label>
    <type>Checkbox</type>
</CustomField>