force-app/main/default/objects/Account/fields/Realtor_Group__c.field-meta.xml
<CustomField>
    <fullName>Realtor_Group__c</fullName>
    <label>Realtor Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Nickley Group</fullName>
            </value>
            <value>
                <fullName>EXP Realty Melbourne</fullName>
            </value>
            <value>
                <fullName>Coastal Real Estate Professionals</fullName>
            </value>
            <value>
                <fullName>Nickley ISA&apos;s</fullName>
            </value>
            <value>
                <fullName>SERHANT - ORL</fullName>
            </value>
            <value>
                <fullName>Wemert Group</fullName>
            </value>
            <value>
                <fullName>Premier Group At Compass</fullName>
            </value>
            <value>
                <fullName>Homes by Cusi</fullName>
            </value>
            <value>
                <fullName>Champagne &amp; Parisi Real Estate</fullName>
            </value>
            <value>
                <fullName>Rinker Realty</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>