force-app/main/default/objects/Account/fields/Realtor_Individual_License_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Realtor_Individual_License_Exp_Date__c</fullName>
    <label>Realtor/Individual License Exp. Date</label>
    <type>Date</type>
</CustomField>