force-app/main/default/objects/Account/fields/Realtor_Individual_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Realtor_Individual_License_Number__c</fullName>
    <label>Realtor/Individual License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>