force-app/main/default/objects/Account/fields/Realtor_lead__c.field-meta.xml
<CustomField>
    <fullName>Realtor_lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field shows the related lead record for realtors.</description>
    <label>Realtor lead</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Lead.RecordTypeId</field>
            <operation>equals</operation>
            <value>Realtor Lead record type</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Realtor_person_account</relationshipName>
    <type>Lookup</type>
</CustomField>