force-app/main/default/objects/Account/fields/Realtor_Source__c.field-meta.xml
<CustomField>
    <fullName>Realtor_Source__c</fullName>
    <label>Realtor Referral Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>TikTok</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Youtube</fullName>
            </value>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>