force-app/main/default/objects/Account/fields/Test_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Test_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Checkbox</label>
    <type>Checkbox</type>
</CustomField>