force-app/main/default/objects/Account/fields/Title_Attorney_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Title_Attorney_License_Number__c</fullName>
    <label>Title/Attorney License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>