force-app/main/default/objects/Account/fields/Transaction_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction Coordinator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>