force-app/main/default/objects/Account/fields/Unique_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_Account_ID__c</fullName>
    <label>Unique Account  ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>